// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "floecat/common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

// ----- Catalog -----

message Catalog {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  string display_name = 2;
  optional string description = 3;
  optional string connector_ref = 4;
  optional string policy_ref = 5;
  google.protobuf.Timestamp created_at = 6;
  map<string,string> properties = 99;
}

message ListCatalogsRequest {
  ai.floedb.floecat.common.PageRequest page = 1;
}
message ListCatalogsResponse {
  repeated Catalog catalogs = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message GetCatalogRequest {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
}
message GetCatalogResponse {
  Catalog catalog = 1;
}

message CatalogSpec {
  string display_name = 1;
  optional string description = 2;
  optional string connector_ref = 3;
  optional string policy_ref = 4;
  map<string,string> properties = 99;
}

message CreateCatalogRequest {
  CatalogSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateCatalogResponse {
  Catalog catalog = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message UpdateCatalogRequest {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
  CatalogSpec spec = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
  google.protobuf.FieldMask update_mask = 4;
}
message UpdateCatalogResponse {
  Catalog catalog = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteCatalogRequest {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
  bool require_empty = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
}
message DeleteCatalogResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

// ----- Services -----

service CatalogService {
  rpc ListCatalogs(ListCatalogsRequest) returns (ListCatalogsResponse);
  rpc GetCatalog(GetCatalogRequest) returns (GetCatalogResponse);
  rpc CreateCatalog(CreateCatalogRequest) returns (CreateCatalogResponse);
  rpc UpdateCatalog(UpdateCatalogRequest) returns (UpdateCatalogResponse);
  rpc DeleteCatalog(DeleteCatalogRequest) returns (DeleteCatalogResponse);
}